padding adjust for header spacing, corrected title on tablet/mobile

--- a/css/index.css
+++ b/css/index.css
@@ -186,6 +186,11 @@ footer div p {
   border-width: 1px;
   border-radius: 0px;
 }
+@media (max-width: 1050px) {
+  #headerSpacing {
+    padding-top: 22rem;
+  }
+}
 @media (max-width: 800px) {
   #headerSpacing {
     padding-top: 25rem;
@@ -296,6 +301,7 @@ footer div p {
 }
 @media (max-width: 800px) {
   .fixedHeader div #secondary {
+    width: 50%;
     padding-top: 1.5rem;
   }
 }
