--- a/less/global.less
+++ b/less/global.less
@@ -47,6 +47,12 @@ footer {
 
     .boxProperties(25rem 0rem 0rem 0rem, 0rem, none, none);
 
+    @media @smallDesktop {
+
+        padding-top: 22rem;
+
+    }
+
     @media @tablet {
 
         padding-top: 25rem;
@@ -163,6 +169,7 @@ footer {
 
             @media @tablet {
 
+                width: 50%;
                 padding-top: 1.5rem;
 
             }
